--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <body>
 
     <div class="top">
-      <img class="top-cloud " src="D:\WEB DEVELOPMENT-UDEMY\CSS - My Site Images\cloud.png" alt="cloud-image">
+      <img class="cloud.png" alt="cloud-image">
 
       <h1>I'm Abhishek </h1>
       <h2 >a web developer </h2>
       <img class="bottom-cloud " src="D:\WEB DEVELOPMENT-UDEMY\CSS - My Site Images\cloud.png" alt="cloud-img">
-      <img src="D:\WEB DEVELOPMENT-UDEMY\CSS - My Site Images\mountain.png" alt="mountain-image">
+      <img src="mountain.png" alt="mountain-image">
  <hr>
     </div>
     <div class="middle">
