--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <h1>I'm Abhishek </h1>
       <h2 >a web developer </h2>
-      <img class="bottom-cloud " src="D:\WEB DEVELOPMENT-UDEMY\CSS - My Site Images\cloud.png" alt="cloud-img">
+      <img class="bottom-cloud " src="images\cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-image">
  <hr>
     </div>
