--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
 
     <div class="top">
-      <img class="top-cloud src="images\cloud.png" alt="cloud-image">
+      <img class="top-cloud" src="images\cloud.png" alt="cloud-image">
 
       <h1>I'm Abhishek </h1>
       <h2 >a web developer </h2>
