--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="D:\WEB DEVELOPMENT-UDEMY\MY-SITE\favicon.ico">
+    <link rel="icon" href="images\favicon.ico">
     <link rel="stylesheet" href="D:\WEB DEVELOPMENT-UDEMY\MY-SITE\styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
     </div>
     <div class="middle">
       <div class="profile">
-        <img src="D:\abhi album\1652605974283-cropped.png" alt="MY DP" height="400px" width="400px">
+        <img src="images\1652605974283-cropped.png" alt="MY DP" height="400px" width="400px">
         <h2>Hello.</h2>
         <p>Currently, I am pursuing  bachleor of technology from Birsa Institute of Technology, Sindri,Dhanbad from <br> Electronics and communication branch (2020-24). </p>
       </div>
@@ -33,13 +33,13 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="java" src="C:\Users\HP\Downloads\java-logo-1.png" alt="java"  >
+          <img class="java" src="images\java-logo-1.png" alt="java"  >
           <h3>Java Programming </h3>
           <p>Completed my basic java programming when I was in 3rd semester of btech.<br>I have taken classes from ARGUS academy,Ranchi. </p>
         </div>
 
         <div class="skill-row">
-          <img class="dsa" src="C:\Users\HP\Downloads\dsa.png" alt="DSA">
+          <img class="dsa" src="images\dsa.png" alt="DSA">
           <h3>Data Structure & Algorithm</h3>
           <p>
             Completed my basics of Data Structures in december 2021. For this I have taken classes from Argus Academy,Ranchi.<br> I practice it from Lead Code and Geeks for geeks.
@@ -47,7 +47,7 @@
         </div>
 
         <div class="skill-row">
-          <img class="webd" src="C:\Users\HP\Downloads\SeekPng.com_web-development-png_4929420.png" alt="webd">
+          <img class="webd" src="images\SeekPng.com_web-development-png_4929420.png" alt="webd">
           <h3>Web development and designing </h3>
           <p class="content_webd">Currently I'm learning web development with all my hard work and dedication . I am taking classes from Udemy platform for this.<br> Very soon I will master this skill</p>
         </div>
