--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2>Get In Touch</h2>
         <h3>If u love this website and the content present in it. </h3>
         <p class="content-contact">Contact me ,if you want some changes I will surely look after that. Your reviews are very important for me to grown .<br> Show your love by supporting me .</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <a class="btn" href="mailto:abhi.davkathara@email.com">CONTACT ME</a>
 
       </div>
     </div>
